# microgpt_workshop

./: README.md  japanese_names.txt  microgpt_generate.py  microgpt_train.py  pyproject.toml
